测试openrewrite/rewrite的简单应用